# local

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOY_GUIDE.md  FINAL_COMPLETION_REPORT.md  MEDIUM_PRIORITY_REPORT.md  OPTIMIZATION_REPORT.md  README.md  amaç.md  check_eskisehir.py  dev-docker.sh  dev-local.sh  fix-vps-issues.sh  geojson_vs_havza.py  play_network.txt  veri_analizi.js
projects/anka/services/backend/: .coverage  .dockerignore  IMPLEMENTATION_REPORT.md  celery_app.py  celerybeat-schedule  conftest.py  create_test_user.py  db.sqlite3  enrich_websites_with_gemini.py  package-lock.json  package.json  pyproject.toml  requirements-base.txt  requirements.txt
projects/anka/services/backend/apps/accounts/: cookie_auth.py  models.py  serializers.py  urls.py  views.py
projects/anka/services/backend/apps/audit/: models.py
projects/anka/services/backend/apps/batches/: models.py  permissions.py  serializers.py  services.py  tasks.py  views.py
projects/anka/services/backend/apps/catalog/: models.py  serializers.py  urls.py  views.py
projects/anka/services/backend/apps/common/: alerts.py  models.py  permissions.py  pii.py
projects/anka/services/backend/apps/credits/: models.py  serializers.py  views.py
projects/anka/services/backend/apps/disputes/: models.py  rule_engine.py  serializers.py  tasks.py  views.py
projects/anka/services/backend/apps/exports/: models.py  (+3 more)
projects/anka/services/backend/artifacts/: openapi.generated.yaml
projects/anka/services/backend/project/: asgi.py  urls.py  wsgi.py
projects/anka/services/backend/test_env/: pyvenv.cfg
(+1638 files in other folders)
