[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anka-backend"
version = "0.1.0"
description = "Anka Platform Backend - B2B Data Utility SaaS"
authors = [
    {name = "Anka Team", email = "info@anka.co"}
]
license = {text = "Proprietary"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=21.0.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=apps --cov-report=html --cov-report=term-missing"
testpaths = ["apps"]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
